--- a/src/main/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,12 @@
     <param-value>true</param-value>
   </context-param>
 
+  <!-- Easier than setting up CORS: -->
+  <context-param>
+    <param-name>ENABLE_JSONP</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
   <context-param>
     <!-- see comments on the PARTIAL-BUFFER strategy -->
     <!-- this sets the size of the buffer.  default is "50" = 50kb -->
